--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-956.4KB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-303.6KB/s(Youtube:不良林), server: 129.226.93.47, port: 54592, type: vmess, uuid: 5b1e77bf-a73c-4756-e64a-4f02ac35ed43, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林), server: 213.183.53.177, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
-  - {name: 🇸🇬 新加坡-165.9KB/s(Youtube:不良林), server: 129.226.95.108, port: 58681, type: vmess, uuid: 758c6c64-e7bc-4bbf-dd58-cbd21c09c75a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.86MB/s(Youtube:不良林), server: 54.214.170.7, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇷🇺 俄罗斯联邦-5.16MB/s(Youtube:不良林), server: 213.183.53.177, port: 9033, type: ss, cipher: aes-256-cfb, password: UTJA57ypk2XKQpnm}
+  - {name: 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-850.5KB/s(Youtube:不良林), server: 129.226.216.124, port: 14728, type: vmess, uuid: eea3d090-e068-4b74-8039-91fd79218d1a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.26MB/s(Youtube:不良林), server: 129.226.214.28, port: 15430, type: vmess, uuid: 6e9a4ae9-e60b-4cea-af9f-9de18d37404e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.22MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-6.07MB/s(Youtube:不良林), server: 213.183.53.177, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇳🇱 荷兰-1.81MB/s(Youtube:不良林), server: 213.183.59.214, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
+  - {name: 🇳🇱 荷兰-3.08MB/s(Youtube:不良林), server: 213.183.59.214, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
   - {name: 🇺🇸 美国-3.73MB/s(Youtube:不良林), server: 129.150.61.170, port: 29493, type: vmess, uuid: ac0d0076-93d2-48ad-ba6e-ea5c8d7b0132, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 129.150.61.170}}
-  - {name: 🇸🇬 新加坡-2.40MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 6f0a9d0fa39d65fa, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.36MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 6f0a9d0fa39d65fa, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-2.38MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-956.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-303.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-165.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-5.16MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-850.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-6.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.81MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.40MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.36MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.38MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-956.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-303.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-165.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-5.16MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-850.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-6.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.81MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.40MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.36MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.38MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-956.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-303.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-165.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-5.16MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-850.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-6.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.81MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.40MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.36MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.38MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-956.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-303.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-165.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-5.16MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-850.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-6.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.81MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.40MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.36MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.38MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-956.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-303.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-165.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-5.16MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-850.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-6.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.81MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.40MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.36MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.38MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-956.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-303.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-165.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-5.16MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-850.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-6.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.81MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.40MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.36MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.38MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-956.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-303.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-165.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-5.16MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.61MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-850.5KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.22MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-6.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.81MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.08MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.40MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.36MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-2.38MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
