--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-7.13MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-936.8KB/s(Youtube:不良林), server: jp04.vproxy.us, port: 56565, type: trojan, password: acf34fb3-6fed-40c6-b6ab-b5bedf5827a2, sni: jp04.vproxy.us, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.91MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-520.8KB/s(Youtube:不良林), server: 129.226.95.108, port: 58681, type: vmess, uuid: 758c6c64-e7bc-4bbf-dd58-cbd21c09c75a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-327.1KB/s(Youtube:不良林), server: 129.226.94.246, port: 33357, type: vmess, uuid: f1fcdce3-ebd3-4506-b455-c3d3fde62658, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-4.06MB/s(Youtube:不良林), server: 213.183.53.177, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇳🇱 荷兰-1.12MB/s(Youtube:不良林), server: 213.183.59.214, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
-  - {name: 🇺🇸 美国-3.73MB/s(Youtube:不良林), server: 129.150.61.170, port: 29493, type: vmess, uuid: ac0d0076-93d2-48ad-ba6e-ea5c8d7b0132, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 129.150.61.170}}
-  - {name: 🇸🇬 新加坡-2.36MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 6f0a9d0fa39d65fa, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.48MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-968.3KB/s(Youtube:不良林), server: 213.183.59.214, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
+  - {name: 🇳🇱 荷兰-3.22MB/s(Youtube:不良林), server: 213.183.59.211, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
+  - {name: 🇳🇱 荷兰-3.61MB/s(Youtube:不良林), server: 213.183.59.211, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
+  - {name: 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.32MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.03MB/s(Youtube:不良林), server: rooms.starspace.link, port: 443, type: trojan, password: 5HfENR8nt2PR8reH, sni: rooms.starspace.link, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.13MB/s(Youtube:不良林), server: storage.starspace.link, port: 443, type: trojan, password: W8gVbKNAZlFzgGPn, sni: storage.starspace.link, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.73MB/s(Youtube:不良林), server: snacks.starspace.link, port: 443, type: trojan, password: 0lbw6RXSl7eqCYMv, sni: snacks.starspace.link, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.17MB/s(Youtube:不良林), server: events.starspace.link, port: 443, type: trojan, password: 3RWFPCmWd4lYIMof, sni: events.starspace.link, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.85MB/s(Youtube:不良林), server: wireless.starspace.link, port: 443, type: trojan, password: 5LN8SGTqxk336nFg, sni: wireless.starspace.link, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-936.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-520.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-327.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.12MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-968.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.22MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.36MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-7.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-936.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-520.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-327.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.12MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-968.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.22MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.36MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-936.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-520.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-327.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.12MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-968.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.22MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.36MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-7.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-936.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-520.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-327.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.12MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-968.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.22MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.36MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-936.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-520.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-327.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.12MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-968.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.22MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.36MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-936.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-520.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-327.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.12MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-968.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.22MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.36MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.13MB/s(Youtube:不良林)
-      - 🇯🇵 日本-936.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-520.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-327.1KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.12MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-968.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.22MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.36MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.85MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
