--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-968.3KB/s(Youtube:不良林), server: 213.183.59.214, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
-  - {name: 🇳🇱 荷兰-3.22MB/s(Youtube:不良林), server: 213.183.59.211, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
-  - {name: 🇳🇱 荷兰-3.61MB/s(Youtube:不良林), server: 213.183.59.211, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.32MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-19.43MB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
+  - {name: 🇸🇬 新加坡-184.0KB/s(Youtube:不良林), server: 129.226.95.188, port: 20792, type: vmess, uuid: b7335dae-b946-46ae-f341-acbf8df21c86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-3.21MB/s(Youtube:不良林), server: 213.183.59.206, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
+  - {name: 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.48MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.03MB/s(Youtube:不良林), server: rooms.starspace.link, port: 443, type: trojan, password: 5HfENR8nt2PR8reH, sni: rooms.starspace.link, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.13MB/s(Youtube:不良林), server: storage.starspace.link, port: 443, type: trojan, password: W8gVbKNAZlFzgGPn, sni: storage.starspace.link, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.73MB/s(Youtube:不良林), server: snacks.starspace.link, port: 443, type: trojan, password: 0lbw6RXSl7eqCYMv, sni: snacks.starspace.link, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-968.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.22MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-184.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.21MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-968.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.22MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-184.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.21MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-968.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.22MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-184.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.21MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-968.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.22MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-184.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.21MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-968.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.22MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-184.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.21MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-968.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.22MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-184.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.21MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-968.3KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.22MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.61MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.32MB/s(Youtube:不良林)
+      - 🇯🇵 日本-19.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-184.0KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.21MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.11MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.13MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.73MB/s(Youtube:不良林)
